Refactor BundledLocale: use List.copyOf for file names and return Optional in fromFolderName method